Feat: 롤링페이퍼 편지캡슐 상세조회
